--- a/index.html
+++ b/index.html
@@ -733,6 +733,12 @@ This document provides a step-by-step guide for developers to set up the project
 
 ## Steps to Re-Setup the Project
 
+### Uninstall Angular CLI Globally
+
+\`\`\`bash
+
+run 'npm uninstall -g @angular/cli'
+\`\`\`
 ### Install Angular CLI Globally (Version 19)
 \`\`\`bash
 run 'npm install -g @angular/cli@19'
